--- a/app/src/main/res/layout/musician_item.xml
+++ b/app/src/main/res/layout/musician_item.xml
@@ -21,7 +21,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/imageViewMusician"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginHorizontal="15dp"
