--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,10 +27,15 @@ app:destination="@id/fragmentMenuInicial"/>
     <fragment
         android:id="@+id/fragmentMenuColeccionista"
         android:name="com.example.vinyls.view.FragmentMenuColeccionista"
-        tools:layout="@layout/fragment_menu_coleccionista"/>
+        tools:layout="@layout/fragment_menu_coleccionista">
+
+    </fragment>
     <action
         android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumList"
         app:destination="@id/fragmentAlbumList" />
+    <action
+        android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumCreate"
+        app:destination="@id/fragmentAlbumCreate" />
 
 
 
@@ -122,8 +127,15 @@ app:destination="@id/fragmentMenuInicial"/>
     <fragment
         android:id="@+id/fragmentCollectorList"
         android:name="com.example.vinyls.view.FragmentCollectorList"
-        tools:layout="@layout/fragment_collector_list" />
+        tools:layout="@layout/fragment_collector_list" >
 
+    </fragment>
+
+    <!-- Crear álbum -->
+    <fragment
+        android:id="@+id/fragmentAlbumCreate"
+        android:name="com.example.vinyls.view.FragmentAlbumCreate"
+        tools:layout="@layout/fragment_album_create" />
 
 
 </navigation>
